--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.collapsible .content {
+  transition: height 0.5s ease;
+  overflow: hidden;
+}
+.collapsible .content.hidden {
+  height: 0;
+}
+.collapsible .toggle {
+  font: unset;
+  background: #00f;
+  color: aliceblue;
+  border: unset;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.75rem;
+  cursor: pointer;
+}
+.collapsible {
+  margin-bottom: 0.5rem;
 }
