--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,24 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+.container {
+  display: flex;
+  justify-content: center;
+  width: 600px;
+  margin: auto;
 }
-.collapsible .content {
-  transition: height 0.5s ease;
-  overflow: hidden;
+.container input {
+  border: none;
+  border-bottom: 1px solid grey;
+  margin: 10px 20px;
 }
-.collapsible .content.hidden {
-  height: 0;
+input:focus {
+  outline: none;
 }
-.collapsible .toggle {
-  font: unset;
-  background: #00f;
-  color: aliceblue;
-  border: unset;
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.75rem;
+.container button {
+  border: none;
+  background-color: cornflowerblue;
+  padding: 5px 10px;
   cursor: pointer;
-}
-.collapsible {
-  margin-bottom: 0.5rem;
+  color: aliceblue;
+  border-radius: 5px;
+  width: 100%;
+  margin: 10px 0;
 }
